# merit_analyzer

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  k.py  pyproject.toml  requirements.txt  setup.py  test_claude_sdk.py  traces.jsonl
.github/workflows/: check.yml  dependabot-lock.yml  publish.yml  test.yml
docs/: docs.json  index.mdx
docs/apis/: index.mdx  metrics.mdx  predicates.mdx  testing.mdx  tracing.mdx
docs/concepts/: case.mdx  merit.mdx  metric.mdx  resource.mdx  semantic-predicates.mdx  sut.mdx
docs/examples/: index.mdx
docs/get-started/: installation.mdx  merit-vs-evals.mdx  quick-start.mdx
docs/usage/: investigating-merits.mdx  running-merits.mdx  writing-merits.mdx
examples/: merit_example.py  merit_example_assertions.py  merit_example_captured_output.py  merit_example_cases.py  merit_example_metrics.py  merit_example_parametrize_and_tags.py  merit_example_predicates.py  merit_example_trace_context.py  merit_examples_cases.py  merit_temp.py  simple_example.py
merit_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
merit_analyzer/analysis/: claude_agent.py  root_cause.py  schema_discovery.py
merit_analyzer/core/: __init__.py  analyzer.py  config.py  pattern_merger.py  universal_pattern_detector.py
merit_analyzer/discovery/: framework_detector.py  project_scanner.py
merit_analyzer/models/: recommendation.py  report.py  test_result.py
merit_analyzer/recommendations/: consolidator.py  executive_summary.py  generator.py  prioritizer.py
src/error_analysis/: __init__.py
(+131 files in other folders)
